// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row should render component with default sized row 1`] = `
<div
  className="row-container row-container--default"
  size="default"
>
  <div
    className="row"
  />
</div>
`;

exports[`Row should render component with large sized row 1`] = `
<div
  className="row-container row-container--large"
  size="large"
>
  <div
    className="row"
  />
</div>
`;

exports[`Row should render component with medium sized row 1`] = `
<div
  className="row-container row-container--medium"
  size="medium"
>
  <div
    className="row"
  />
</div>
`;
